--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,4 +10,7 @@
  *
  *= require_self
  *= require_tree .
- */
+
+ *= require foundation_and_overrides
+ *= require ../jquery-ui-1.10.3.custom/css/ui-lightness/jquery-ui-1.10.3.custom
+*/
