--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,9 @@
  *= require_self
  *= require_tree .
 
- *= require foundation_and_overrides
+ * require foundation_and_overrides
  *= require ../jquery-ui-1.10.3.custom/css/ui-lightness/jquery-ui-1.10.3.custom
+ *= require ../bootstrap-3.0.1/css/bootstrap
+ *= require ../choco-templates/css/style
+ *= require ../choco-templates/css/flexslider
 */
