--- a/app/views/family_members/index.html.erb
+++ b/app/views/family_members/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing family_members</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Family member', new_family_member_path %>
+<%= link_to 'New Family member', new_family_member_path, class: "btn btn-primary active", role: "button" %>
