--- a/app/views/needs/_form.html.erb
+++ b/app/views/needs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@need) do |f| %>
+<%= default_form_for(@need) do |f| %>
   <% if @need.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@need.errors.count, "error") %> prohibited this need from being saved:</h2>
@@ -11,15 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
+  <div class="form-group field">
+    <%= f.label :title %>
     <%= f.text_field :title %>
   </div>
-  <div class="field">
-    <%= f.label :description %><br>
+  <div class="form-group field">
+    <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
-  <div class="actions">
+  <div class="form-group actions">
     <%= f.submit %>
   </div>
 <% end %>
