--- a/app/views/needs/index.html.erb
+++ b/app/views/needs/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing needs</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Title</th>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Need', new_need_path %>
+<%= link_to 'New Need', new_need_path, class: "btn btn-primary active", role: "button" %>
