--- a/app/views/rewards/index.html.erb
+++ b/app/views/rewards/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing rewards</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Title</th>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Reward', new_reward_path %>
+<%= link_to 'New Reward', new_reward_path, class: "btn btn-primary active", role: "button" %>
