--- a/app/views/layouts/landing-page.html.erb
+++ b/app/views/layouts/landing-page.html.erb
@@ -17,10 +17,10 @@
   	<title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
 
   	<link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico" />
-    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= stylesheet_link_tag    "landing-page", media: "all", "data-turbolinks-track" => true %>
   	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700' rel='stylesheet' type='text/css' />
 
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "landing-page", "data-turbolinks-track" => true %>
     
     <%= csrf_meta_tags %>
   </head>
