reorganizes assets to more cleanly separate landing page resources from normal application resources

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,11 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- * require_tree .
- *= require common.css.scss
- *= require family_members.css.scss
- *= require needs.css.scss
- *= require rewards.css.scss
+ *= require_tree ./application
 
  * require foundation_and_overrides
  *= require ../jquery-ui-1.10.3.custom/css/ui-lightness/jquery-ui-1.10.3.custom
