--- a/app/views/layouts/landing-page.html.erb
+++ b/app/views/layouts/landing-page.html.erb
@@ -33,15 +33,8 @@
 			<div class="shell">
 				<a href="#" class="nav-btn">HOMEPAGE<span></span></a>
 				<span class="top-nav-shadow"></span>
-				<ul>
-					<li class="active"><span><a href="#">home</a></span></li>
-					<li><span><a href="#">services</a></span></li>
-					<li><span><a href="#">projects</a></span></li>
-					<li><span><a href="#">solutions</a></span></li>
-					<li><span><a href="#">jobs</a></span></li>
-					<li><span><a href="#">blog</a></span></li>
-					<li><span><a href="#">contacts</a></span></li>
-				</ul>
+
+        <%= render partial: "shared/top_nav" %>
 			</div>
 		</nav>
 		<!-- end of top-nav -->
