--- a/app/assets/stylesheets/landing-page.css.scss
+++ b/app/assets/stylesheets/landing-page.css.scss
@@ -8,7 +8,6 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
  *= require_tree ./application
  *= require_tree ./landing-page
 
@@ -17,4 +16,15 @@
  * require ../bootstrap-3.0.1/css/bootstrap
  *= require ../choco-templates/css/style
  *= require ../choco-templates/css/flexslider
+
+ *= require_self
 */
+
+      @media only screen and ( max-width: 767px) { 
+        .main .testimonial {
+          padding-left: 0;
+          padding-right: 0;
+          padding-top: 70px;
+        }
+      }
+
