--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,10 +17,10 @@
   	<title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
 
   	<link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico" />
-    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= stylesheet_link_tag    "application", media: "all" %>
   	<link href='http://fonts.googleapis.com/css?family=Ubuntu:400,500,700' rel='stylesheet' type='text/css' />
 
-    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application" %>
     
     <%= csrf_meta_tags %>
   </head>
@@ -51,8 +51,7 @@
 								<span class="mobile">Keeping the house clean is everyone's job.</span>
 								<span class="desktop">What can you do today to make a difference?  Many hands make light work.  Everybody makes a difference.</span>
 							</p>
-							<a href="#" class="blue-btn">See a need?</a>
-							<a href="#" class="blue-btn">Have a want?</a>
+              <a href="#" class="blue-btn">See a need?</a>
 						</div>
 						<!-- end of header-cnt -->
 						<!-- slider -->
@@ -85,7 +84,7 @@
 				<span class="shadow-top"></span>
 				<!-- shell -->
 				<div class="shell">
-					<div class="container">
+					<div class="choc-container">
 						<!-- testimonial -->
 						<section class="testimonial" style="display: none; ">
 							<h2>Thank you!!</h2>
@@ -188,7 +187,7 @@
 					</div>
 				<!-- end of shell -->
 				</div>
-				<!-- end of container -->
+				<!-- end of choc-container -->
 			</div>
 			<!-- end of main -->
 		</div>	
