--- a/app/views/layouts/landing-page.html.erb
+++ b/app/views/layouts/landing-page.html.erb
@@ -31,7 +31,7 @@
 		<!-- top-nav -->
 		<nav class="top-nav">
 			<div class="shell">
-				<a href="#" class="nav-btn">HOMEPAGE<span></span></a>
+				<a href="#" class="nav-btn">Family Chores<span></span></a>
 				<span class="top-nav-shadow"></span>
 
         <%= render partial: "shared/top_nav" %>
