--- a/app/assets/choco-templates/css/style.css
+++ b/app/assets/choco-templates/css/style.css
@@ -233,7 +233,7 @@ html, body { height: 100%; }
 	.slider-holder .flexslider ul.slides li img { width: 100%; height: 100%; }
 	.choc-container { padding: 20px 10px 0; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
-	.main .testimonial { padding-left: 0; padding-right: 0; }
+	/* .main .testimonial { padding-left: 0; padding-right: 0; } */
 	.main span.shadow-top { top: 0px; left: 0; }
 	.main section { background: url(images/mobile-section-shadow.png) no-repeat center bottom  !important; }
 	.main section.blog { background: transparent  !important; padding-bottom: 0; }
