--- a/app/views/needs/new.html.erb
+++ b/app/views/needs/new.html.erb
@@ -3,3 +3,9 @@
 <%= render 'form' %>
 
 <%= link_to 'Back', needs_path %>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("#need_title").select().focus(); 
+  });
+</script>
