--- a/app/views/needs/show.html.erb
+++ b/app/views/needs/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Picture:</strong>
+  <%= image_tag @need.picture_url(:slide_show) %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @need.description %>
 </p>
