--- a/app/views/needs/show.html.erb
+++ b/app/views/needs/show.html.erb
@@ -7,7 +7,9 @@
 
 <p>
   <strong>Picture:</strong>
+  <div class="picture-preview">
   <%= image_tag @need.picture_url(:slide_show) %>
+  </div>
 </p>
 
 <p>
