--- a/app/views/shared/_top_nav.html.erb
+++ b/app/views/shared/_top_nav.html.erb
@@ -2,6 +2,7 @@
 					<li class=""><%= menu_item("home", [:welcome]) %></li>
 					<li><%= menu_item("needs", [:needs]) %></li>
 					<li><%= menu_item("rewards", [:rewards]) %></li>
+					<li><%= menu_item("kudos", [:kudos]) %></li>
 					<li><%= menu_item("family members", [:family_members]) %></li>
 				</ul>
 
