--- a/app/assets/stylesheets/application/kudos.css.scss
+++ b/app/assets/stylesheets/application/kudos.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Kudos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.current-preview{
+  margin-top: 15px;
+}
+
+.current-preview span{
+  margin-left: 1em;
+}
+
