--- a/app/views/kudos/index.html.erb
+++ b/app/views/kudos/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing kudos</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Title</th>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Kudo', new_kudo_path %>
+<%= link_to 'New Kudo', new_kudo_path, class: "btn btn-primary active", role: "button" %>
