--- a/app/views/layouts/landing-page.html.erb
+++ b/app/views/layouts/landing-page.html.erb
@@ -81,8 +81,11 @@
 					<div class="container">
 						<!-- testimonial -->
 						<section class="testimonial">
-							<h2>Thank you!!</h2>
-							<p><strong>“</strong>The bathroom really stunk yesterday.  When I went in today, I felt like I was walking in a rose garden.  Thanks for a job well done, Timothy!"</span></p>
+							<h2><%= @testimonial.title.capitalize %>, <%= @testimonial.recipient.name %></h2>
+							<p><strong>“</strong><%= (@testimonial.description.blank?) ? "We sure appreciate your help!" : @testimonial.recipient.name %></span></p>
+              <%= link_to @testimonial do %>
+              <%= image_tag @testimonial.picture_url(:thumbnail) %>
+              <% end %>
 						</section>
 						<!-- testimonial -->
 
