protects from blank testimonial

--- a/app/views/layouts/landing-page.html.erb
+++ b/app/views/layouts/landing-page.html.erb
@@ -81,8 +81,8 @@
 					<div class="container">
 						<!-- testimonial -->
 						<section class="testimonial">
-							<h2><%= @testimonial.title.capitalize %>, <%= @testimonial.recipient.name %></h2>
-							<p><strong>“</strong><%= (@testimonial.description.blank?) ? "We sure appreciate your help!" : @testimonial.recipient.name %></span></p>
+              <h2><%= say_thankyou(@testimonial) %></h2>
+							<p><strong>“</strong><%= (@testimonial.description.blank?) ? "We sure appreciate your help!" : @testimonial.description %></span></p>
               <%= link_to @testimonial do %>
               <%= image_tag @testimonial.picture_url(:thumbnail) %>
               <% end %>
