--- a/app/views/needs/_form.html.erb
+++ b/app/views/needs/_form.html.erb
@@ -17,8 +17,7 @@
   </div>
   <div class="form-group field">
     <%= f.label :picture %>
-    <%= f.file_field :picture %>
-    <%= f.hidden_field :picture_cache %>
+    <%= f.file_field :picture, model: @need, uploader_label: :picture %>
   </div>
   <div class="form-group field">
     <%= f.label :description %>
