adjusts a few cosmetic issues including the margins in the narrow view adds additional versions of family logo for tablet and phone

--- a/app/views/kudos/index.html.erb
+++ b/app/views/kudos/index.html.erb
@@ -18,8 +18,8 @@
       <tr>
         <td><%= kudo.title %></td>
         <td><%= kudo.description %></td>
-        <td><%= kudo.recipient %></td>
-        <td><%= kudo.picture %></td>
+        <td><%= kudo.recipient.name %></td>
+        <td><%= image_tag kudo.picture_url(:thumbnail) %></td>
         <td><%= link_to 'Show', kudo %></td>
         <td><%= link_to 'Edit', edit_kudo_path(kudo) %></td>
         <td><%= link_to 'Destroy', kudo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
