--- a/app/assets/choco-templates/css/style.css
+++ b/app/assets/choco-templates/css/style.css
@@ -144,7 +144,7 @@ html, body { height: 100%; }
 	
 	#header { background: url(images/header-tablet.png) repeat-x 0 0; height: 257px; }
 	.header-cnt #logo { width: 277px; font-size: 0; line-height: 0; }
-	.header-cnt #logo a { height: 93px; background: url(images/logo-tablet.png) no-repeat 0 0; text-indent: -4000px; display: block;  }
+	.header-cnt #logo a { height: 93px; background: url(images/chores-vezzani-family-logo-tablet.png) no-repeat 0 0; text-indent: -4000px; display: block;  }
 
 	.top-nav span.top-nav-shadow { display: none; }
 	.top-nav ul { font-size: 14px; }
@@ -199,7 +199,7 @@ html, body { height: 100%; }
 	#header { background: url(images/header-@2x.png) repeat-x 0 0; height: 218px; width: 100%; }
 
 	.header-cnt #logo { width: 280px; font-size: 0; line-height: 0; margin-bottom: 8px; }
-	.header-cnt #logo a { height: 94px; background: url(images/logo-@2x.png) no-repeat 0 0; text-indent: -4000px; display: block;  }
+	.header-cnt #logo a { height: 94px; background: url(images/chores-vezzani-family-logo-phone.png) no-repeat 0 0; text-indent: -4000px; display: block;  }
 	
 	.top-nav { position: relative; z-index: 1001; background: #fcfcff; height: 48px; margin: 7px; border: 1px solid #9ad0e2; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -o-border-radius: 5px; }
 	.top-nav span.top-nav-shadow { display: none; }
@@ -219,7 +219,9 @@ html, body { height: 100%; }
 	.top-nav a.nav-btn span.active { background: url(images/nav-arr-active.png) no-repeat center 20px; }
 	/* .top-nav ul li.first  { display: none; } */
 
-	.header-inner { width: 100%; padding: 0 10px; background: transparent; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+	/* .header-inner { width: 100%; padding: 0 10px; background: transparent; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; } */
+	.header-inner { width: 100%; padding: 0 20px; background: transparent; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+  
 	.header-cnt { width: 100%; height: 200px; padding-top: 20px;  }
 	.header-cnt a.blue-btn { top: 426px; position: absolute; left: 50% !important; margin-left: -97px; }
 	.header-cnt a.blue-btn:hover { background-position: 0 0; text-decoration: none; color: #dbdbdb;  }
