creates new transformation enhances testimonial with larger image

--- a/app/views/layouts/landing-page.html.erb
+++ b/app/views/layouts/landing-page.html.erb
@@ -84,7 +84,7 @@
               <h2><%= say_thankyou(@testimonial) %></h2>
 							<p><strong>“</strong><%= testimonial_description(@testimonial) %></span></p>
               <%= link_to @testimonial do %>
-              <%= image_tag @testimonial.picture_url(:thumbnail) %>
+              <%= image_tag @testimonial.picture_url(:phone) %>
               <% end %>
 						</section>
 						<!-- testimonial -->
